# primer3-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: primer_design_demo.ipynb
src/primer3_mcp/: __init__.py  api.py  models.py  primer_design.py  server.py  utils.py
tests/: __init__.py  test_primer_design.py  test_server.py
tests/fixtures/: test_sequences.py
